# second-brain

./: .gitignore  README.md  main.py  pyproject.toml  setup_observability.sh
src/: __init__.py  config.py
src/agents/: ingestion_agent.py  memory_agent.py  orchestrator_agent.py  research_agent.py
src/cli/: interface.py
src/evaluation/: evals.py  metrics.py
src/guardrails/: pii_agent.py  pii_ner.py  pii_sanitization.py
src/ingestion/: parsers.py
src/memory/: mem0_adapter.py
src/observability/: otel_setup.py
src/rag/: chunking.py  embeddings.py  vector_store.py
